--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-liblzma",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "NodeJS wrapper for liblzma",
   "main": "./lib/lzma.js",
   "scripts": {
@@ -34,7 +34,6 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
-    "coffee-script": "*",
     "nan": "latest",
     "node-pre-gyp": "latest",
     "ubs": "latest"
@@ -48,6 +47,11 @@
   "engines": {
     "node": ">=0.10.1"
   },
+  "files": [
+    "build.yml",
+    "lib",
+    "build/Release/node-liblzma.node"
+  ],
   "binary": {
     "module_name": "node-liblzma",
     "module_path": "./build/",
