--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ permissions:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
         # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
         os: [ubuntu-latest, macos-11, windows-latest]
