--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
           - os: macos-11 # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary
             build-group: darwin-x64
           - os: windows-latest
-            build-group: win32-x64
+            build-group: win-x64
           - os: ubuntu-latest
             build-group: linux-x64
     runs-on: ${{ matrix.os }}
