--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,9 +64,9 @@ jobs:
       - name: Set version from branch name
         run: npm version --no-git-tag-version "${GITHUB_REF##refs/tags/v}"
       - name: Go publish
-        run: npm publish
+        run: npm publish --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_PACKAGES_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PACKAGES_TOKEN }}
   release:
     needs: build
     permissions:
