--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "main": "./lib/lzma.js",
   "scripts": {
     "install": "node-gyp install",
-    "postinstall": "run-p build:*",
-    "build:native": "node-gyp rebuild",
-    "build:coffee": "coffee --compile --output lib/ src/",
+    "postinstall": "node-gyp rebuild",
+    "prepublish": "coffee --compile --output lib/ src/",
     "rebuild": "node-gyp rebuild",
     "test": "npx mocha test/*.coffee"
   },
   "dependencies": {
     "node-addon-api": "4.2.0",
-    "node-gyp-build": "4.3.0",
-    "npm-run-all": "4.1.5"
+    "node-gyp-build": "4.3.0"
   },
   "devDependencies": {
     "coffeescript": "2.6.1",
