--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "NodeJS wrapper for liblzma",
   "main": "./lib/lzma.js",
   "scripts": {
-    "install": "node-gyp install",
-    "postinstall": "node-gyp rebuild",
-    "prepublish": "coffee --compile --output lib/ src/",
-    "rebuild": "node-gyp rebuild",
-    "test": "npx mocha test/*.coffee"
+    "install": "node-gyp-build",
+    "prepare": "coffee --compile --output lib/ src/",
+    "prebuildify": "npx prebuildify --napi --strip -t $(node -v)",
+    "prebuildify:win": "for /f \"usebackq tokens=*\" %v in (`node -v`) do npx prebuildify -t %v --napi --strip",
+    "test": "mocha test/*.coffee"
   },
   "dependencies": {
     "node-addon-api": "4.2.0",
@@ -18,7 +18,6 @@
     "coffeescript": "2.6.1",
     "expect.js": "0.3.1",
     "mocha": "9.2.1",
-    "node-gyp": "8.4.1",
     "tsd": "0.19.1"
   },
   "types": "index.d.ts",
