--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,10 @@ jobs:
       matrix:
         # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
         os: [ubuntu-latest, macos-11, windows-latest]
-        node: [12, 14, 16]
+        node: [16]
+        runtime_link: [static, shared]
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} / Node ${{ matrix.node }}
+    name: ${{ matrix.os }} / Node ${{ matrix.node }} / Runtime Link is ${{ matrix.runtime_link }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -34,6 +35,6 @@ jobs:
           node-version: ${{ matrix.node }}
           architecture: x64
       - name: Install
-        run: yarn install
+        run: yarn install --runtime_link=${{ matrix.runtime_link }}
       - name: Test
         run: yarn test
