--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ jobs:
         # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
         os: [ubuntu-latest, macos-11, windows-latest]
         node: [16]
+        use_global_liblzma: [true, false]
         runtime_link: [static, shared]
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} / Node ${{ matrix.node }} / Runtime Link is ${{ matrix.runtime_link }}
+    name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Runtime is ${{ matrix.runtime_link }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,6 +36,9 @@ jobs:
           node-version: ${{ matrix.node }}
           architecture: x64
       - name: Install
-        run: yarn install --runtime_link=${{ matrix.runtime_link }}
+        run: yarn install
+        env:
+          USE_GLOBAL: ${{ matrix.use_global_liblzma }}
+          RUNTIME_LINK: ${{ matrix.runtime_link }}
       - name: Test
         run: yarn test
