--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,11 @@ jobs:
         # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
         os: [ubuntu-latest, macos-11, windows-latest]
         node: [16]
-        use_global_liblzma: [true, false]
         runtime_link: [static, shared]
+        include:
+          - os: ubuntu-latest
+            runtime_link: static
+            use_global_liblzma: false
     runs-on: ${{ matrix.os }}
     name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Runtime is ${{ matrix.runtime_link }}
     steps:
