--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test on Windows
 on:
   push:
     branches:
@@ -19,18 +19,11 @@ jobs:
       fail-fast: false
       matrix:
         # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
-        os: [ubuntu-latest, macos-11, windows-latest]
+        os: [windows-latest]
         node: [16]
         runtime_link: [static, shared]
         use_global_liblzma: [true, false]
         enable_threads: [yes, no]
-        exclude:
-          - os: windows-latest
-            use_global_liblzma: true
-          # For now config.h by default enables thread support so use it in our module
-          - os: windows-latest
-            use_global_liblzma: false
-            enable_threads: no
     runs-on: ${{ matrix.os }}
     name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Threading enabled ? ${{ matrix.enable_threads }} / Runtime is ${{ matrix.runtime_link }}
     steps:
