--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -24,6 +24,10 @@ jobs:
         runtime_link: [static, shared]
         use_global_liblzma: [true, false]
         enable_threads: [yes, no]
+        exclude:
+          # This OS does not have the ability to install liblzma globally
+          - os: windows-latest
+            use_global_liblzma: true
     runs-on: ${{ matrix.os }}
     name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Threading enabled ? ${{ matrix.enable_threads }} / Runtime is ${{ matrix.runtime_link }}
     steps:
