--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -36,6 +36,14 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           architecture: x64
+      - name: System library is multi threading capable
+        run: |
+          if readelf -Wa /usr/lib/x86_64-linux-gnu/liblzma.a | grep lzma_stream_encoder_mt
+          then
+            echo "System library is multi threading capable: yes"
+          else
+            echo "System library is multi threading capable: no"
+          fi
       - name: Install
         run: yarn install
         env:
