--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -36,6 +36,20 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           architecture: x64
+      - name: Checking if system library is multi threading capable
+        run: |
+          if readelf -Wa /usr/lib/liblzma.a | grep lzma_stream_encoder_mt
+          then
+            echo "Static system library is multi threading capable: yes"
+          else
+            echo "Static system library is multi threading capable: no"
+          fi
+          if readelf -Wa /usr/lib/liblzma.so | grep lzma_stream_encoder_mt
+          then
+            echo "Dynamic system library is multi threading capable: yes"
+          else
+            echo "Dynamic system library is multi threading capable: no"
+          fi
       - name: Install
         run: yarn install
         env:
