--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -38,13 +38,14 @@ jobs:
           architecture: x64
       - name: Checking if system library is multi threading capable
         run: |
-          if readelf -Wa /usr/lib/liblzma.a | grep lzma_stream_encoder_mt
+          brew update && brew install binutils
+          if greadelf -Wa /usr/lib/liblzma.a | grep lzma_stream_encoder_mt
           then
             echo "Static system library is multi threading capable: yes"
           else
             echo "Static system library is multi threading capable: no"
           fi
-          if readelf -Wa /usr/lib/liblzma.so | grep lzma_stream_encoder_mt
+          if greadelf -Wa /usr/lib/liblzma.so | grep lzma_stream_encoder_mt
           then
             echo "Dynamic system library is multi threading capable: yes"
           else
