fix(macos): add binutils to PATH

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Checking if system library is multi threading capable
         run: |
           brew update && brew install binutils
+          export PATH="/usr/local/opt/binutils/bin:$PATH"
           if greadelf -Wa /usr/lib/liblzma.a | grep lzma_stream_encoder_mt
           then
             echo "Static system library is multi threading capable: yes"
