fix(workflows): only trigger what impacts specifically the platform

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,6 +1,10 @@
 name: Test on MacOS
 on:
   push:
+    paths:
+      - "!*.md"
+      - "!.github"
+      - ".github/workflows/ci-macos.yml"
     branches:
       - master
       - "releases/**"
