--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -1,6 +1,10 @@
 name: Test on Linux
 on:
   push:
+    paths:
+      - "!*.md"
+      - "!.github"
+      - ".github/workflows/ci-linux.yml"
     branches:
       - master
       - "releases/**"
