--- a/.github/workflows/ci-checkprereq.yml
+++ b/.github/workflows/ci-checkprereq.yml
@@ -11,12 +11,9 @@ on:
         type: string
     # Map the workflow outputs to job outputs
     outputs:
-      mt-static:
-        description: "Does the static library exposes multithreading API ?"
-        value: ${{ jobs.check.outputs.mt-static }}
-      mt-shared:
-        description: "Does the shared library exposes multithreading API ?"
-        value: ${{ jobs.check.outputs.mt-shared }}
+      has-mt:
+        description: "Does the library exposes multithreading API ?"
+        value: ${{ jobs.check.outputs.has-mt }}
 
 jobs:
   check:
@@ -24,11 +21,10 @@ jobs:
     runs-on: ${{ inputs.os }}
     # Map the job outputs to step outputs
     outputs:
-      mt-static: ${{ steps.mt-static.outputs.CONDITION }}
-      mt-shared: ${{ steps.mt-shared.outputs.CONDITION }}
+      has-mt: ${{ steps.check-mt.outputs.CONDITION }}
     steps:
       - name: Checking if system library is multi threading capable
-        id: mt-static
+        id: check-mt
         if: inputs.runtime_link == 'static'
         run: |
           if readelf -Wa /usr/lib/x86_64-linux-gnu/liblzma.a | grep lzma_stream_encoder_mt
@@ -40,7 +36,7 @@ jobs:
             echo '::set-output name=CONDITION::false'
           fi
       - name: Checking if system library is multi threading capable
-        id: mt-shared
+        id: check-mt
         if: inputs.runtime_link == 'shared'
         run: |
           if readelf -Wa /usr/lib/x86_64-linux-gnu/liblzma.so | grep lzma_stream_encoder_mt
