--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -73,11 +73,12 @@ jobs:
           architecture: x64
       - name: Check prerequisites for multithreading
         id: precond
-        uses: './.github/workflows/ci-checkprereq'
-        if: ${{ matrix.use_global_liblzma && matrix.use_global_liblzma != 'false' }}
-        with:
-          os: ${{ matrix.os }}
-          runtime_link: ${{ matrix.runtime_link }}
+        run: ls -l ./.github/workflows/
+        # uses: './.github/workflows/ci-checkprereq'
+        # if: ${{ matrix.use_global_liblzma && matrix.use_global_liblzma != 'false' }}
+        # with:
+        #   os: ${{ matrix.os }}
+        #   runtime_link: ${{ matrix.runtime_link }}
       - name: Install
         if: matrix.use_global_liblzma == 'false' || (steps.precond.outputs.has-mt && steps.precond.outputs.has-mt != 'false')
         run: yarn install
