--- a/.github/workflows/ci-checkprereq.yml
+++ b/.github/workflows/ci-checkprereq.yml
@@ -10,10 +10,10 @@ on:
     outputs:
       static-has-mt:
         description: "Does the static library exposes multithreading API ?"
-        value: ${{ fromJSON(jobs.check.outputs.static-has-mt) }}
+        value: ${{ jobs.check.outputs.static-has-mt }}
       shared-has-mt:
         description: "Does the shared library exposes multithreading API ?"
-        value: ${{ fromJSON(jobs.check.outputs.shared-has-mt) }}
+        value: ${{ jobs.check.outputs.shared-has-mt }}
 
 jobs:
   check:
@@ -21,8 +21,8 @@ jobs:
     runs-on: ${{ inputs.os }}
     # Map the job outputs to step outputs
     outputs:
-      static-has-mt: ${{ steps.check-mt.outputs.STATIC }}
-      shared-has-mt: ${{ steps.check-mt.outputs.SHARED }}
+      static-has-mt: ${{ fromJSON(steps.check-mt.outputs.STATIC) }}
+      shared-has-mt: ${{ fromJSON(steps.check-mt.outputs.SHARED) }}
     steps:
       - name: Checking if system library is multi threading capable
         run: |
