--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -55,8 +55,8 @@ jobs:
     runs-on: 'ubuntu-latest'
     # Map the job outputs to step outputs
     outputs:
-      static-has-mt: ${{ fromJSON(steps.check-mt.outputs.STATIC) }}
-      shared-has-mt: ${{ fromJSON(steps.check-mt.outputs.SHARED) }}
+      static-has-mt: ${{ steps.check-mt.outputs.STATIC && steps.check-mt.outputs.STATIC != 'false' }}
+      shared-has-mt: ${{ steps.check-mt.outputs.SHARED && steps.check-mt.outputs.SHARED != 'false' }}
     steps:
       - name: Checking if system library is multi threading capable
         id: check-mt
