--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -106,12 +106,12 @@ jobs:
           echo static-has-mt: ${{ needs.check.outputs.static-has-mt }}
           echo shared-has-mt: ${{ needs.check.outputs.static-has-mt }}
       - name: Install
-        if: ${{ !fromJSON(matrix.use_global_liblzma) || (matrix.runtime_link == 'static' && needs.check.outputs.static-has-mt) || (matrix.runtime_link == 'shared' && needs.check.outputs.shared-has-mt)}}
+        if: (matrix.runtime_link == 'static' && needs.check.outputs.static-has-mt) || (matrix.runtime_link == 'shared' && needs.check.outputs.shared-has-mt)
         run: yarn install
         env:
           USE_GLOBAL: ${{ matrix.use_global_liblzma }}
           RUNTIME_LINK: ${{ matrix.runtime_link }}
           ENABLE_THREAD_SUPPORT: ${{ matrix.enable_threads }}
       - name: Test
-        if: ${{ !fromJSON(matrix.use_global_liblzma) || (matrix.runtime_link == 'static' && needs.check.outputs.static-has-mt) || (matrix.runtime_link == 'shared' && needs.check.outputs.shared-has-mt)}}
+        if: (matrix.runtime_link == 'static' && needs.check.outputs.static-has-mt) || (matrix.runtime_link == 'shared' && needs.check.outputs.shared-has-mt)
         run: yarn test
