--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -22,16 +22,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary.
         os: [windows-latest]
         node: [16]
         runtime_link: [static, shared]
-        use_global_liblzma: [true, false]
+        # This OS does not have the ability to install liblzma globally
+        use_global_liblzma: [false]
         enable_threads: [yes, no]
-        exclude:
-          # This OS does not have the ability to install liblzma globally
-          - os: windows-latest
-            use_global_liblzma: true
     runs-on: ${{ matrix.os }}
     name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Threading enabled ? ${{ matrix.enable_threads }} / Runtime is ${{ matrix.runtime_link }}
     steps:
